Date	Added

2006/10/03
	* Renamed setting delay_dependon_dex to delay_dependon_agi, the delay of
	  skills is reduced now (when enabled) by AGI instead of DEX, which makes a
	  lot more sense than DEX. [Skotlex]
2006/09/25
	* Removed config setting allow_atcommand_when_mute as it's no longer used
	  (see manner_system in misc.conf for it's replacement) [Skotlex]
2006/09/19
	* Removed setting ban_spoof_namer (as now invalid chat packets just cause
	  the sending character to be disconnected). [Skotlex]
2006/09/18
	* The new socket update code includes support for two new config settings
	  (packet_athena.txt): frame_size, which can be used to alter the logic
	  packet-size allowed by the code, and mode_neg, which when set to yes, sets
	  TCP_NODELAY on all connections (defaults to yes). [Skotlex]
	* Due to a recent update of how cards/equipment status change defense
	  works, the max sc resistance settings (battle/status.conf) no longer apply
	  to them. [Skotlex]
2006/09/16
	* Added monster_ai&256. When set, a monster will pick a random starting
	  position to begin checking versus it's skills, otherwise, it will always
	  begin checking from the beginning. [Skotlex]
2006/09/15
	* Added atcommand.conf entries for @adjgmlvl and @adjcmdlvl [Skotlex]
2006/09/14
	* Adjusted gvg long damage rate to 80%, magic damage rate to 60%
	  (battle/guild.conf) [Skotlex]
2006/09/12
	* Changed back the default of case-sensitive to ON since it shouldn't be
	  such a bad performance hog now. [Skotlex]
	* case_sensitive is now off by default due to performance issues
	  (login_athena.conf). [Skotlex]
2006/09/11
	* Corrected name of config settings pc_luk_status_def, mob_luk_status_def
	  (status.conf) [Skotlex]
	* Changed the default of enable_baseatk to 9 (player + homun) [Skotlex]
	* Changed the default of enable_perfect_flee to 1 (players only) [Skotlex]
2006/09/09
	* Removed noteleport flags from Geffenia maps [Playtester]
2006/09/08